corrected spacing and text alignment

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -23,7 +23,7 @@
 }
 body{
   background-position-y: 390px;
-  background-position-x: -30px;
+  background-position-x: -75px;
   background-size: 100%;
   background-image: url("580b585b2edbce24c47b2d11.png");
   background-repeat: no-repeat;
@@ -36,6 +36,6 @@ body{
 }
 .whitetext{
     
-     margin-top: 150px; 
+     margin-top: 400px; 
   
 }
